--- a/src/index.css
+++ b/src/index.css
@@ -250,7 +250,7 @@ main {
     padding: 1rem;
     border: none;
     border-radius: 1rem;
-    text-align: center;
+    text-align: left;
     background-color: var(--gris-claro);
 }
 
